<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/appGif"
            android:layout_width="246dp"
            android:layout_height="215dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/chat" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="295dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:text="aa@aa.aa" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="295dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="aaaaaa" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:text="@string/label_sign_in"
                android:textAllCaps="false" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/label_no_account_question"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.748" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/label_sign_up"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.796" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>