<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/addImageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_add_image"
                android:textSize="@dimen/_14ssp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_add_image"
            android:layout_marginTop="30dp"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/label_email_dots"
                android:textColor="@color/blue"/>

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="TextView"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/label_phone_dots"
                android:textColor="@color/blue"/>

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="TextView"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/label_birthday_dots"
                android:textColor="@color/blue"/>


            <TextView
                android:id="@+id/birthdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="TextView"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Button
            android:id="@+id/changeLangButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edit_text"
            android:text="@string/label_change_language"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edit_text"
            android:text="@string/label_log_out"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>